# minipascalHW

./: README.md  example.pas  minipascal.cabal
app/: Main.hs
src/Language/: MiniPascal.hs
src/Language/MiniPascal/: AST.hs  Interpreter.hs  Lang.hs  Parser.hs  PrettyPrinter.hs  TypeChecker.hs
test/: Examples.hs  Main.hs  MockIO.hs
