cabal-version: 3.0

name: minipascal
version: 0.1.0.0
description: none

executable minipascal
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.13 && <5,
    minipascal,
  default-language:
    Haskell2010

library
  hs-source-dirs:
    src
  exposed-modules:
    Language.MiniPascal
  other-modules:
    Language.MiniPascal.Parser
    Language.MiniPascal.Lang
    Language.MiniPascal.AST
    Language.MiniPascal.TypeChecker
    Language.MiniPascal.Interpreter
    Language.MiniPascal.PrettyPrinter
  build-depends:
    base >=4.13 && <5,
    mtl,
    containers,
    megaparsec,
    parser-combinators,
  default-extensions:
    BlockArguments

    NamedFieldPuns
    DuplicateRecordFields
    
    OverloadedStrings
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving

    FlexibleContexts
    FlexibleInstances

    TypeFamilies
    TypeFamilyDependencies


test-suite minipascal-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    base >=4.13 && <5,
    directory,
    hspec,
    minipascal,
  other-modules:
    MockIO
    Examples
  default-extensions:
    BlockArguments
    DuplicateRecordFields
    OverloadedStrings